--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                 recommendations = `
                     <ul>
                         <li>Continue standard developmental follow-up</li>
-                        <li>Routine surveillance at well-child visits</li>
+                        <li>Routine follow-up at well-child visits</li>
                         <li>Provide age-appropriate developmental guidance</li>
                         <li>Encourage continued positive parenting practices</li>
                         <li>Annual developmental screening recommended</li>
