--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                             </tr>
                             <tr>
                                 <td><strong>Employment Status</strong></td>
-                                <td>• Employed (reference)<br>• Stay-at-home caregiver<br>• Student<br>• Unemployed</td>
+                                <td>• Employed (reference)<br>• Stay-at-home caregiver<br>• Unemployed</td>
                                 <td>Reflects economic stability and time resources</td>
                             </tr>
                             <tr>
@@ -719,7 +719,6 @@
                                     <option value="">Select...</option>
                                     <option value="0">Employed (Reference)</option>
                                     <option value="0.113">Stay-at-home caregiver</option>
-                                    <option value="0">Student (Reference)</option>
                                     <option value="-0.831">Unemployed</option>
                                 </select>
                             </div>
@@ -811,7 +810,6 @@
                                     <option value="">Select...</option>
                                     <option value="0">Employed (Reference)</option>
                                     <option value="-5.356">Stay-at-home caregiver</option>
-                                    <option value="0">Student (Reference)</option>
                                     <option value="-2.033">Unemployed</option>
                                 </select>
                             </div>
