--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                         </div>
                         <div class="finding-card">
                             <h4>Validation</h4>
-                            <div class="value">r=0.34</div>
+                            <div class="value">r=0.38[R² = 0.14] (unsupervised) and r=0.34 [R² = 0.12] (supervised)</div>
                             <div class="description">5-year temporal validity</div>
                         </div>
                     </div>
